[package]
name = "is_send_sync"
version = "0.1.0"
authors = ["neptunepink <purpleposeidon@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/purpleposeidon/is_send_sync"
description = "Macro to tell if a type is Send/Sync."
categories = ["rust-patterns"]
keywords = ["memory", "macro", "marker"]

[lib]
path = "./lib.rs"
